# Colosseum

./: .cursorignore  .gitignore  .npmrc  Anchor.toml  BEZIER_CURVE_ON_CHAIN.md  BONDING_CURVE_INTEGRATION.md  BONDING_CURVE_METAPLEX_INTEGRATION.md  BONDING_CURVE_PROGRAM.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUE_AND_SOLUTION.md  DEPLOYMENT_STATUS.md  FAL_AI_SETUP.md  INTEGRATION_SUMMARY.md  MIGRATION_STATUS.md  MINTING_QUICKSTART.md  NFT_MINTING_TESTING.md  PRIVY_SETUP.md  PROFILE_BUCKET_SETUP_SUMMARY.md  PROFILE_STORAGE_QUICKSTART.md  README.md  SETUP.md  SOLANA_MINTING_SETUP.md  STORAGE_FIX.md  STORAGE_QUICK_FIX.md  STUDIOS.md  SUNO_FLOW_JOCKEY.md  TENSOR_INTEGRATION_SUMMARY.md  WORM_SETUP.md  package.json  pnpm-lock.yaml  vercel.json
apps/web/: .env.local.example  console.txt  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/src/hooks/: use-solana-wallet.ts  use-storage-migration.ts
apps/web/src/lib/: bonding-curve-deploy.ts  bonding-curve-mint-service.ts  bonding-curve-wallet-mint.ts  indexed-db-storage.ts  metadata-service.ts  nft-mint-client.ts  project-service.ts  (+8 more)
docs/: BEZIER_CURVE_IMPLEMENTATION.md  BEZIER_CURVE_ON_CHAIN.md  BONDING_CURVE_COMPLETE.md  MAINNET_DEPLOYMENT.md  PERSONALIZED_FEED.md  PROFILE_BUCKET_CHANGES.md  SOLANA_MINTING_IMPLEMENTATION.md  SOLANA_WALLET_FIX.md  STORJ_BACKEND_REFACTOR.md  STORJ_PROFILE_SETUP.md  STUDIOS.md  TENSOR_INTEGRATION.md  TENSOR_QUICK_START.md  WORM_INTEGRATION_SUMMARY.md
programs/bonding-curve/: Cargo.toml
programs/bonding-curve/src/: lib.rs  lib_full.rs  lib_full.rs.bak  lib_minimal.rs  lib_with_metaplex.rs
(+74 files in other folders)
