[package]
name = "bonding-curve"
version = "0.1.0"
description = "Solana program for NFT bonding curves"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-token-metadata = "5.0.0-alpha.1"

