[package]
name = "bonding-curve"
version = "0.1.0"
description = "Solana program for NFT bonding curves"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

