[package]
name = "bonding-curve"
version = "0.1.0"
description = "Solana program for NFT bonding curves"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Better optimization
overflow-checks = true
strip = true        # Strip symbols

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

